@@ -1,3 +1,8 @@
+2008-12-07 TADA Tadashi <t@tdtds.jp>
+	* tdiary/filter/default.rb, tdiary/defaultio.rb, tdiary.rb,
+	plugin/00default.rb: added encoding to File::open's parameter. But it
+	dosen't work yet.
+
 2008-12-07 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
 	* misc/lib/compatible.rb: add compatible.rb
 
